--- a/index.html
+++ b/index.html
@@ -4,91 +4,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meme Star Runner - $1 Moon Missions</title>
+    <title>Meme-Star Runner - Premium Project Promotions</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Space+Grotesk:wght@300;400;700;800&family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700;800&family=Permanent+Marker&display=swap" rel="stylesheet">
     <style>
-        :root {
-            --neon-purple: #a855f7;
-            --neon-pink: #ec4899;
-            --neon-blue: #06b6d4;
-        }
         body {
             background-color: #020202;
             color: #ffffff;
             font-family: 'Space Grotesk', sans-serif;
             overflow-x: hidden;
-        }
-        .pixel-font { font-family: 'Press Start 2P', cursive; }
-        .marker-font { font-family: 'Permanent Marker', cursive; }
-        
-        .bg-grid {
-            background-image: linear-gradient(to right, #1a1a1a 1px, transparent 1px),
-                              linear-gradient(to bottom, #1a1a1a 1px, transparent 1px);
-            background-size: 50px 50px;
+            margin: 0;
         }
 
-        .bg-grid-floor {
-            background-image: 
-                linear-gradient(0deg, transparent 24%, rgba(168, 85, 247, 0.15) 25%, rgba(168, 85, 247, 0.15) 26%, transparent 27%, transparent 74%, rgba(168, 85, 247, 0.15) 75%, rgba(168, 85, 247, 0.15) 76%, transparent 77%, transparent),
-                linear-gradient(90deg, transparent 24%, rgba(168, 85, 247, 0.15) 25%, rgba(168, 85, 247, 0.15) 26%, transparent 27%, transparent 74%, rgba(168, 85, 247, 0.15) 75%, rgba(168, 85, 247, 0.15) 76%, transparent 77%, transparent);
-            background-size: 60px 60px;
-            transform: perspective(500px) rotateX(65deg) translateY(-150px);
-            height: 1200px;
-            width: 300%;
-            left: -100%;
+        /* Synthwave / Outrun Background */
+        .neon-background {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            background: linear-gradient(to bottom, #020202 0%, #0a001a 100%);
+            overflow: hidden;
+        }
+
+        .background-grid {
             position: absolute;
-            bottom: -600px;
-            z-index: 0;
-            opacity: 0.4;
-            mask-image: linear-gradient(to top, black 30%, transparent 100%);
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 60%;
+            background-image: 
+                linear-gradient(rgba(168, 85, 247, 0.2) 1px, transparent 1px),
+                linear-gradient(90deg, rgba(168, 85, 247, 0.2) 1px, transparent 1px);
+            background-size: 60px 60px;
+            transform: perspective(500px) rotateX(60deg);
+            transform-origin: center bottom;
+            mask-image: linear-gradient(to top, black, transparent);
+            -webkit-mask-image: linear-gradient(to top, black, transparent);
         }
 
-        .retro-sun {
-            background: linear-gradient(to bottom, #ffea00 0%, #ff9100 50%, #ff3c00 100%);
-            mask-image: repeating-linear-gradient(to bottom, black 0px, black 14px, transparent 14px, transparent 20px);
-            -webkit-mask-image: repeating-linear-gradient(to bottom, black 0px, black 14px, transparent 14px, transparent 20px);
-            box-shadow: 0 0 100px #ff3c00;
+        .glowing-orb {
+            position: absolute;
+            border-radius: 50%;
+            filter: blur(100px);
+            opacity: 0.2;
+            animation: float 25s infinite ease-in-out;
         }
 
-        .animate-scroll {
-            animation: scroll 25s linear infinite;
-        }
-        @keyframes scroll {
-            0% { transform: translateX(0); }
-            100% { transform: translateX(-50%); }
+        @keyframes float {
+            0%, 100% { transform: translate(0, 0) scale(1); }
+            50% { transform: translate(50px, -80px) scale(1.1); }
         }
 
-        .logo-bounce {
-            animation: logoFloat 4s ease-in-out infinite;
-        }
-        @keyframes logoFloat {
-            0%, 100% { transform: translateY(0) rotate(-1deg); }
-            50% { transform: translateY(-15px) rotate(1deg); }
-        }
-
-        /* Custom Scrollbar for the Degen experience */
+        /* Custom Scrollbar */
         ::-webkit-scrollbar { width: 8px; }
         ::-webkit-scrollbar-track { background: #000; }
         ::-webkit-scrollbar-thumb {
-            background: linear-gradient(to bottom, var(--neon-purple), var(--neon-pink));
+            background: linear-gradient(to bottom, #ec4899, #a855f7);
             border-radius: 10px;
         }
-
-        .scanline {
-            width: 100%;
-            height: 100px;
-            z-index: 10;
-            background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(168, 85, 247, 0.1) 50%, rgba(0, 0, 0, 0) 100%);
-            opacity: 0.1;
-            position: absolute;
-            bottom: 100%;
-            pointer-events: none;
-            animation: scanline 8s linear infinite;
-        }
-        @keyframes scanline {
-            0% { bottom: 100%; }
-            100% { bottom: -100px; }
+        ::-webkit-scrollbar-thumb:hover { background: #ec4899; }
+        
+        .script-font {
+            font-family: 'Permanent Marker', cursive;
         }
     </style>
 <script type="importmap">
@@ -104,8 +83,11 @@
 </script>
 </head>
 <body>
+    <div class="neon-background">
+        <div class="background-grid"></div>
+        <div class="glowing-orb" style="width: 500px; height: 500px; background: #ec4899; top: -10%; left: -10%;"></div>
+        <div class="glowing-orb" style="width: 450px; height: 450px; background: #06b6d4; top: 20%; right: -5%; animation-delay: -7s;"></div>
+    </div>
     <div id="root"></div>
-    <!-- Bitcoin Payment Button Script -->
-    <script src="https://www.blockonomics.co/js/pay_button.js"></script>
 </body>
 </html>
