--- a/index.html
+++ b/index.html
@@ -1,83 +1,52 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meme-Star Runner - Premium Project Promotions</title>
+    <!-- Tailwind CSS for utility styles -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700;800&family=Permanent+Marker&display=swap" rel="stylesheet">
-    <style>
-        body {
-            background-color: #020202;
-            color: #ffffff;
-            font-family: 'Space Grotesk', sans-serif;
-            overflow-x: hidden;
-            margin: 0;
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700;800&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
+    <style type="text/tailwindcss">
+        @layer base {
+            body {
+                @apply bg-[#050505] text-white;
+                font-family: 'Space Grotesk', sans-serif;
+            }
         }
-
-        /* Synthwave / Outrun Background */
-        .neon-background {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            background: linear-gradient(to bottom, #020202 0%, #0a001a 100%);
-            overflow: hidden;
-        }
-
-        .background-grid {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 60%;
-            background-image: 
-                linear-gradient(rgba(168, 85, 247, 0.2) 1px, transparent 1px),
-                linear-gradient(90deg, rgba(168, 85, 247, 0.2) 1px, transparent 1px);
-            background-size: 60px 60px;
-            transform: perspective(500px) rotateX(60deg);
-            transform-origin: center bottom;
-            mask-image: linear-gradient(to top, black, transparent);
-            -webkit-mask-image: linear-gradient(to top, black, transparent);
-        }
-
-        .glowing-orb {
-            position: absolute;
-            border-radius: 50%;
-            filter: blur(100px);
-            opacity: 0.2;
-            animation: float 25s infinite ease-in-out;
-        }
-
-        @keyframes float {
-            0%, 100% { transform: translate(0, 0) scale(1); }
-            50% { transform: translate(50px, -80px) scale(1.1); }
-        }
-
-        /* Custom Scrollbar */
-        ::-webkit-scrollbar { width: 8px; }
-        ::-webkit-scrollbar-track { background: #000; }
-        ::-webkit-scrollbar-thumb {
-            background: linear-gradient(to bottom, #ec4899, #a855f7);
-            border-radius: 10px;
-        }
-        ::-webkit-scrollbar-thumb:hover { background: #ec4899; }
-        
-        .script-font {
-            font-family: 'Permanent Marker', cursive;
+        @layer components {
+            .neon-background {
+                @apply fixed inset-0 -z-10 overflow-hidden;
+                background: radial-gradient(circle at 50% 50%, #110022 0%, #050505 100%);
+            }
+            .background-grid {
+                @apply absolute inset-0;
+                background-image: 
+                    linear-gradient(rgba(255, 255, 255, 0.03) 1px, transparent 1px),
+                    linear-gradient(90deg, rgba(255, 255, 255, 0.03) 1px, transparent 1px);
+                background-size: 40px 40px;
+                mask-image: radial-gradient(circle at 50% 50%, black, transparent 80%);
+            }
+            .ambient-glow {
+                @apply absolute w-[80vw] h-[80vw] pointer-events-none;
+                background: radial-gradient(circle, rgba(255, 0, 122, 0.05) 0%, transparent 70%);
+                top: -20%;
+                left: -20%;
+            }
         }
     </style>
-<script type="importmap">
+    <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "@google/genai": "https://esm.sh/@google/genai@1.34.0",
+    "lucide-react": "https://esm.sh/lucide-react@0.473.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
@@ -85,9 +54,9 @@
 <body>
     <div class="neon-background">
         <div class="background-grid"></div>
-        <div class="glowing-orb" style="width: 500px; height: 500px; background: #ec4899; top: -10%; left: -10%;"></div>
-        <div class="glowing-orb" style="width: 450px; height: 450px; background: #06b6d4; top: 20%; right: -5%; animation-delay: -7s;"></div>
+        <div class="ambient-glow"></div>
     </div>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
