--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
         @layer components {
             .neon-background {
                 @apply fixed inset-0 -z-10;
-                /* Note: The background image provided by the user is applied here as a repeating tile */
+                /* Using the provided coin image as repeating pattern with a fallback mechanism in JS if possible, 
+                   but here we set a CSS background that looks great */
                 background-image: url('https://storage.googleapis.com/cumulus-v1-prod-assets/output_fdfefc1d-1576-4be0-8334-972166663f73.png');
                 background-repeat: repeat;
-                background-size: 500px;
-                opacity: 0.35; /* Increased opacity so user can see it */
-                filter: brightness(0.6);
+                background-size: 400px;
+                opacity: 0.25; 
+                filter: brightness(0.5) contrast(1.2);
             }
             .background-overlay {
                 @apply fixed inset-0 -z-20 pointer-events-none;
-                background: linear-gradient(180deg, #050505 0%, #0a0a0c 100%);
+                background: radial-gradient(circle at 50% 50%, transparent 0%, #050505 100%);
             }
             .background-grid {
                 @apply absolute inset-0 opacity-10;
